fix navigation z-index and changed bg video to webm

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -64,6 +64,7 @@ h3{
 .nav-global{
     display: flex;
     justify-content: center;
+    z-index: 99999;
 }
 p{
     font-size: var(--body-font);
